Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11460

Cannot debug BlackBerry application when only QML debugger is enabled in project debug settings

XMLWordPrintable

    • cb66d1ec23dfb5313a6bad5bbb9bd398381dde83

      BlackBerry application can be debugged only if both C++ and QML debugger is checked in project run settings. When only QML debugger is checked, the application starts with a blank screen and freeze.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tnatterlund Tobias Nätterlund
            fvacek Fanda Vacek
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes